[gd_scene load_steps=5 format=3 uid="uid://bommmvy1qyobc"]

[ext_resource type="Script" path="res://ui/components/settings/settings.gd" id="1_00drh"]
[ext_resource type="FontFile" uid="uid://lj5nmow7tv56" path="res://assets/fonts/Cantarell-Bold.ttf" id="1_ypfvs"]
[ext_resource type="Texture2D" uid="uid://gt3mnhyhb64b" path="res://assets/images/folder-open-symbolic 1.svg" id="3_e8eqq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_icrj2"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="Settings" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_icrj2")
script = ExtResource("1_00drh")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ypfvs")
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="AppDataDir" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBox/AppDataDir"]
layout_mode = 2
size_flags_vertical = 8
text = "Application Data Directory"

[node name="Value" type="LineEdit" parent="VBox/AppDataDir"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
placeholder_text = "/home/jdavis/.local/share/drivechain_launcher"
editable = false

[node name="Open" type="Button" parent="VBox/AppDataDir"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("3_e8eqq")

[node name="SidechainsDataDir" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBox/SidechainsDataDir"]
layout_mode = 2
size_flags_vertical = 8
text = "Sidechains Data Directory"

[node name="Value" type="LineEdit" parent="VBox/SidechainsDataDir"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
placeholder_text = "/home/jdavis/.local/share/drivechain_launcher"
editable = false

[node name="Open" type="Button" parent="VBox/SidechainsDataDir"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("3_e8eqq")

[node name="DrivechainDataDir" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBox/DrivechainDataDir"]
layout_mode = 2
size_flags_vertical = 8
text = "Drivechain Data Directory"

[node name="Value" type="LineEdit" parent="VBox/DrivechainDataDir"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
placeholder_text = "/home/jdavis/.local/share/drivechain_launcher"
editable = false

[node name="Open" type="Button" parent="VBox/DrivechainDataDir"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("3_e8eqq")

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
text = "Reset Everything"

[connection signal="pressed" from="VBox/AppDataDir/Open" to="." method="_on_app_data_open_pressed"]
[connection signal="pressed" from="VBox/SidechainsDataDir/Open" to="." method="_on_sidechain_data_open_pressed"]
[connection signal="pressed" from="VBox/DrivechainDataDir/Open" to="." method="_on_drivechain_data_open_pressed"]
[connection signal="pressed" from="VBox/ResetButton" to="." method="_on_reset_button_pressed"]
